# Recoginer

./: CMakeLists.txt  HungarianMethod.cpp  HungarianMethod.hpp  README.md  edmonds.cpp  edmonds.hpp  log.cpp  log.hpp  os.hpp  recognizer.cpp  recognizer.hpp  shapecontext.cpp  shapecontext.hpp  test_recognizer.cpp  thin.cpp  thin.hpp
include/: munkres.h  thin.hpp
src/: CMakeLists.txt  munkres.cpp  os.cpp  recognizer.cpp  shapecontext.cpp  test_recognizer.cpp  thin.cpp
